--- a/trustlinkmm/package.json
+++ b/trustlinkmm/package.json
@@ -16,10 +16,16 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "draft-js": "^0.11.7",
+    "froala-editor": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-froala-wysiwyg": "^4.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
+    "slate": "^0.103.0",
+    "slate-react": "^0.105.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
