--- a/trustlinkmm/package.json
+++ b/trustlinkmm/package.json
@@ -14,11 +14,15 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.19",
-    "@mui/material": "^5.15.19",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.6.2",
+    "date-fns": "^3.6.0",
     "draft-js": "^0.11.7",
     "froala-editor": "^4.2.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-froala-wysiwyg": "^4.2.0",
